AC_PREREQ([2.63])
AC_INIT(mediasegmenter, 0.1.0, iliya.gr@gmail.com, mediasegmenter, https://github.com/iliya-gr/mediasegmenter)
AC_CONFIG_SRCDIR([mediasegmenter.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.11 foreign])

# Checks for programs.
AC_PROG_CC

PKG_CHECK_MODULES([AVFORMAT], [libavformat >= 57.28.102],  [], [AC_MSG_ERROR([libavformat version 57.28.102 or later required])])
PKG_CHECK_MODULES([AVUTIL],   [libavutil   >= 55.19.100], [], [AC_MSG_ERROR([libavutil version 55.19.100 or later required])])
PKG_CHECK_MODULES([AVCODEC],  [libavcodec  >= 57.28.103], [], [AC_MSG_ERROR([libavcodec version 57.28.103 or later required])])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h limits.h stdint.h string.h getopt.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT64_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strndup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
